---
source: compiler-core/src/fsharp/tests/numbers.rs
expression: "\npub fn foo() {\n  let a = 3\n  let b = --a\n}\n"
---
module rec my.``mod``
let foo (): int = begin
    let a = 3
    let b = -(-a)
    b
end
